--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,5 +29,7 @@
     <string name="theme_light">Светлая тема</string>
     <string name="theme_dark">Темная тема</string>
     <string name="theme_gold">Золотая тема</string>
+    <string name="clear_history">Очистить</string>
+    <string name="close_history">Закрыть</string>
 
 </resources>
